Desktop client: finish rest-registration